SERVER-48333 Whitelist index build oplog entries for the admin.system.version collection during initial sync